--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <h1>Ubicación en Tiempo Real</h1>
     <div id="map"></div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
+    <!-- Cargar el SDK de Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
+    
+    <!-- Cargar Google Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
+    
+    <!-- Script propio -->
     <script src="script.js"></script>
 </body>
 </html>
