--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Xiaomi 4 Ultra Tracker. Todos los derechos reservados.</p>
+        <p>© 2024 Xiaomi 4 Ultra Tracker. Todos los derechos reservados de bicho (jAvi).</p>
     </footer>
 
     <!-- Cargar el SDK de Firebase -->
